umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_oechem_caffeine_3D.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 25
sum_formula: C8H10N4O2
graph6: "W???`MIY?gC?C?A??@??G?@??C??C??C??A???O??A???G?"
