umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_openbabel_culgi_07.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 28
sum_formula: C9H11FN2O4
graph6: ZhCOKG@G??_A?@??_?O?@?CG??_??G?CA???O????G???_???@???@????O?
